# p3-vision-nx

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  SDK_PIN.txt
docs/: nx-plugin-plan.md
python/: adapter_onnx.py  adapter_openvino.py  adapter_pytorch.py  adapter_tensorrt.py  env_probe.py  infer_utils.py  tracker.py  worker.py
python/optional/: adapter_pytorch.py
scripts/: build.sh  deploy.sh
src/nx/vms_server_plugins/analytics/sample/: coco80.cpp  coco80.h  device_agent.cpp  device_agent.h  engine.cpp  engine.h  env_probe.cpp  env_probe.h  ipc_client.cpp  ipc_client.h  plugin.cpp  plugin.h
systemd/: p3-vision-nx-worker.service
